--- a/sass-bem/index.html
+++ b/sass-bem/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <nav>
+  <nav class="navigation">
     <a href="#" class="logo">My Website</a>
     <a href="#" class="button">Log in</a>
   </nav>
-  <header>
-    <div>
-      <h1>Hello</h1>
-      <h2>Welcome to my website</h2>
-      <a href="#" class="button">scroll</a>
+  <header class="header">
+    <div class="intro">
+      <h1 class="intro__heading">Hello</h1>
+      <h2 class="intro__sub-heading">Welcome to my website</h2>
+      <a href="#" class="intro__button button">scroll</a>
     </div>
   </header>
 </body>
