--- a/sass-bem/index.html
+++ b/sass-bem/index.html
@@ -21,20 +21,41 @@
       <a href="#" class="intro__button button">scroll</a>
     </div>
   </header>
-  <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#28527a" fill-opacity="1"
-      d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-    </path>
-  </svg>
+
   <main class="main">
-    <form action="" class="form">
-      <label for="name" class="form__label">Name:</label>
-      <input type="text" name="name" class="form__input" />
-      <label for="email" class="form__label">Email:</label>
-      <input type="email" class="form__input" />
-      <button class="button button--form">Send</button>
-    </form>
+    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#28527a" fill-opacity="1"
+        d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+    <section class="contact">
+      <form action="" class="form">
+        <label for="name" class="form__label">Name:</label>
+        <input type="text" name="name" class="form__input" />
+        <label for="email" class="form__label">Email:</label>
+        <input type="email" class="form__input" />
+        <button class="button button--form">Send</button>
+      </form>
+    </section>
+    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        d="M0,128L60,149.3C120,171,240,213,360,229.3C480,245,600,235,720,208C840,181,960,139,1080,149.3C1200,160,1320,224,1380,256L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+      </path>
+
+    </svg>
+
+    <section class="exit-container">
+      <div class="exit">
+        <h2 class="exit__heading">Thanks For Visiting</h2>
+        <a href="#" class="exit__button button--secondary">Log out</a>
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <a href="#" class="logo">My Website</a>
+    <p class="copyright__text">&#169copyright</p>
+    <p class="copyright__text">2021</p>
+  </footer>
 </body>
 
 </html>
